Main method updated + Genetic Algo improved